# workflow-engine

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  flake.nix  pyproject.toml  release.sh
.claude-plugin/: marketplace.json
.claude/skills/wengine/: SKILL.md  config.example.yaml
.github/workflows/: publish.yml
autoresearch/: engine.py  evaluate.py  program.md  results.tsv
docs/: MIGRATIONS.md  WORKFLOW_LOADING.md  architecture.md  authoring-nodes.md  cli.md  contexts.md  execution.md  node-distribution.md  nodes.md  values.md
docs/plans/: node-distribution.md  type-resolution-redesign.md
examples/: README_matrix_determinant.md  addition.json  append.json  error.json  matrix_determinant.json  workflow_migration_example.py
plugins/wengine/.claude-plugin/: plugin.json
plugins/wengine/skills/wengine/: SKILL.md  engine.example.yaml
plugins/wengine/skills/wengine/scripts/: wengine.sh
scripts/: generate_typecast_graph.py
src/workflow_engine/: __init__.py
src/workflow_engine/cli/: engine_init.py  install.py  install_target.py  main.py  uninstall.py  uv_project.py
src/workflow_engine/contexts/: __init__.py  in_memory.py  local.py
src/workflow_engine/core/: __init__.py  config.py  context.py  edge.py  engine.py  error.py  execution.py  io.py  node.py  path.py  stakeholder.py  workflow.py
src/workflow_engine/core/migration/: __init__.py  migration.py  registry.py  runner.py  workflow_migration.py
src/workflow_engine/core/values/: __init__.py  data.py  decimal_utils.py  extraction.py  file.py  json.py  mapping.py  model.py  primitives.py  rounding.py  schema.py  sequence.py  union.py  value.py
src/workflow_engine/execution/: __init__.py  parallel.py  rate_limit.py  retry.py  topological.py
src/workflow_engine/files/: __init__.py  csv.py  docx.py  json.py  text.py
src/workflow_engine/nodes/: __init__.py  arithmetic.py  comparison.py  conditional.py  constant.py  data.py  error.py  iteration.py  shell.py  text.py
src/workflow_engine/utils/: asynchronous.py  hash.py  immutable.py  importing.py  iter.py  mappings.py  model.py  pattern.py  semver.py  serialization.py
tests/: conftest.py  test_addition.py  test_append.py  test_arithmetic_nodes.py  test_cli.py  test_comparison.py  test_conditional.py  test_data.py  test_deep_edges.py  test_deep_field_access.py  test_engine_config.py  test_engine_init.py  test_env.py  test_error.py  test_file.py  test_hash.py  test_hooks.py  test_immutable.py  test_install.py  test_install_target.py  test_iteration.py  test_matrix_determinant.py  test_metadata.py  test_migration_registry.py  test_migration_runner.py  test_model_value.py  test_node_migration.py  test_node_registry.py  test_node_versioning.py  test_parallel_execution.py  test_rate_limit.py  test_retry.py  test_schema.py  test_schema_roundtrip.py  test_serialization.py  test_shell.py  test_uninstall.py  test_uv_project.py  test_value.py  test_value_registry.py  (+4 more)
tests/fixtures/: filesystem.py  wengine_test_config.yaml
