[project]
name = "workflow-engine"
version = "0.3.3"
description = "A simple engine to execute workflows defined as JSON graphs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anthony Tecsa", email = "anthonytecsa@gmail.com" },
    { name = "Jason Sun", email = "jason@adanomad.com" },
    { name = "Justin Xu", email = "xu.justin.j@gmail.com" },
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "dotenv>=0.9.9",
    "networkx>=3.4.2,<4.0.0",
    "overrides>=7.7.0",
    "pydantic>=2.11.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pydot>=3.0.0",
    "pyright>=1.1.403",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_engine"]
