[project]
name = "aceteam-workflow-engine"
version = "2.0.0rc11"
description = "A powerful workflow orchestration engine for composing complex computational tasks from modular, type-safe nodes"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Anthony Tecsa", email = "anthonytecsa@gmail.com" },
    { name = "Jason Sun", email = "jason@adanomad.com" },
    { name = "Justin Xu", email = "xu.justin.j@gmail.com" },
]
requires-python = ">=3.12,<4.0"
keywords = [
    "workflow",
    "orchestration",
    "dag",
    "pipeline",
    "automation",
    "async",
    "graph",
    "execution",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "click>=8.3.3",
    "dotenv>=0.9.9",
    "networkx>=3.4.2,<4.0.0",
    "overrides>=7.7.0",
    "packaging>=25.0",
    "pydantic>=2.11.1,<3.0.0",
    "pyyaml>=6.0.3",
    "ruamel-yaml>=0.19.1",
    "tomli-w>=1.2.0",
]

[project.scripts]
wengine = "workflow_engine.cli.main:main"

[project.entry-points."aceteam_workflow_engine.nodes"]
# Builtins. Per docs/plans/node-distribution.md, builtins aren't special:
# they're advertised through the same entry-point group as third-party
# packages. `wengine init` seeds `nodes: { "*": [aceteam-workflow-engine] }`
# which mounts everything below under its bare entry-point name.
Input = "workflow_engine.core.io:InputNode"
Output = "workflow_engine.core.io:OutputNode"
Add = "workflow_engine.nodes.arithmetic:AddNode"
Factorization = "workflow_engine.nodes.arithmetic:FactorizationNode"
Sum = "workflow_engine.nodes.arithmetic:SumNode"
If = "workflow_engine.nodes.conditional:IfNode"
IfElse = "workflow_engine.nodes.conditional:IfElseNode"
ConstantBoolean = "workflow_engine.nodes.constant:ConstantBooleanNode"
ConstantInteger = "workflow_engine.nodes.constant:ConstantIntegerNode"
ConstantString = "workflow_engine.nodes.constant:ConstantStringNode"
ExpandData = "workflow_engine.nodes.data:ExpandDataNode"
ExpandMapping = "workflow_engine.nodes.data:ExpandMappingNode"
ExpandSequence = "workflow_engine.nodes.data:ExpandSequenceNode"
GatherData = "workflow_engine.nodes.data:GatherDataNode"
GatherMapping = "workflow_engine.nodes.data:GatherMappingNode"
GatherSequence = "workflow_engine.nodes.data:GatherSequenceNode"
Error = "workflow_engine.nodes.error:ErrorNode"
ForEach = "workflow_engine.nodes.iteration:ForEachNode"
AppendToFile = "workflow_engine.nodes.text:AppendToFileNode"

[project.urls]
Homepage = "https://aceteam.ai/workflow-engine"
Documentation = "https://github.com/aceteam-ai/workflow-engine/tree/main/docs"
Repository = "https://github.com/aceteam-ai/workflow-engine"
Issues = "https://github.com/aceteam-ai/workflow-engine/issues"
Changelog = "https://github.com/aceteam-ai/workflow-engine/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "networkx>=3.6.1",
    "pre-commit>=4.0.0",
    "pydot>=3.0.0",
    "pyright>=1.1.408",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
    "twine>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_engine"]

[tool.ruff.lint]
extend-select = ["I", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["workflow_engine"]
